--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/Nogueira/Downloads/jsoup-1.10.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Nogueira/Downloads/javacsv2.1/javacsv.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
